# fast_search

./: .gitignore  README.md  promt.md  pyproject.toml
fast_search/: __main__.py
